[metadata]
author = Florian Plattner
author-email = me@florianplattner.de
maintainer = Florian Plattner
maintainer-email = me@florianplattner.de
name = env_config
summary = Declare and load configuration from environment variables
description-file = README.rst
home-page = https://github.com/flowpl/env_config
license = MIT
classifier =
     Development Status :: 5 - Production/Stable
     Environment :: Other Environment
     Intended Audience :: Developers
     Intended Audience :: Information Technology
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python :: 3.5
     Programming Language :: Python :: 3.6
     Topic :: Software Development :: Libraries :: Python Modules

keywords =
     config
     configuration
     environment
     env
     environment variables

[files]
packages=env_config

[bdist_wheel]
universal = 1
